--- a/style.css
+++ b/style.css
@@ -3,12 +3,32 @@
     margin: 0 auto;
 }
 
+.navbar .nav-menu ul li:hover {
+    color: #FB09B4;
+
+    transform: scale(1.1);
+    transition: transform .5s ease-in-out;
+}
+
 
 .banner-container {
     background-image: url('./assets/hero-bg.png');
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
+}
+
+.badge {
+    animation-name: tada;
+}
+
+.badge:hover {
+    cursor: pointer;
+
+    font-weight: bold;
+    transform: scale(1.1);
+    transition: transform .2s ease-in;
+
 }
 
 .about-content,
@@ -28,8 +48,9 @@
     padding: 0;
 }
 
-.choose-content:hover{
+.choose-content:hover {
     transform: scale(1.02);
+    transition: transform .7s;
 }
 
 footer {
