--- a/style.css
+++ b/style.css
@@ -18,16 +18,12 @@
     background-position: center;
 }
 
-.badge {
-    animation-name: tada;
-}
 
 .badge:hover {
     cursor: pointer;
-
     font-weight: bold;
     transform: scale(1.1);
-    transition: transform .2s ease-in;
+    transition: transform .2s  ease-in-out;
 
 }
 
@@ -102,6 +98,7 @@ footer {
 
     }
 
+    /* why choose section  */
     .why-choose h1 {
         padding: 40px 20px 16px 20px;
     }
@@ -118,6 +115,8 @@ footer {
         margin: 0 auto;
     }
 
+
+    /* host section  */
     .host-details {
         margin: 24px 20px 40px 20px;
         flex-direction: column;
